# SophiaTX-MainNet

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeDoxyfile.in  CMakeDoxygenDefaults.cmake  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  ISSUE_TEMPLATE.md  Jenkinsfile  LICENSE.md  README.md  circle.yml  genesis.json
example_plugins/example_api_plugin/: CMakeLists.txt  example_api_plugin.cpp
external_plugins/multiparty_messaging/: CMakeLists.txt  multiparty_messaging_api.cpp  multiparty_messaging_plugin.cpp  multiparty_messaging_plugin_export.cpp  plugin.json
external_plugins/test_plugin/: CMakeLists.txt  TestPlugin.cpp  TestPluginApi.cpp
external_plugins/track_and_trace/: CMakeLists.txt  track_and_trace_api.cpp  track_and_trace_plugin.cpp  track_and_trace_plugin_export.cpp
libraries/: CMakeLists.txt
libraries/SQLiteCpp/: .gitignore  CMakeLists.txt
libraries/SQLiteCpp/sqlite3/: CMakeLists.txt
libraries/SQLiteCpp/src/: Column.cpp  Exception.cpp  Statement.cpp
libraries/SQLiteCpp/tests/: Statement_test.cpp
libraries/alexandria/: CMakeLists.txt  Doxyfile.in  api_documentation_standin.cpp  generate_api_documentation.pl  lib_alexandria.cpp  remote_node_api.cpp
libraries/appbase/: CMakeLists.txt  application.cpp  plugin.cpp
libraries/appbase/examples/: main.cpp
libraries/chain/: CMakeLists.txt  block_log.cpp  database.cpp  database_interface.cpp  economics.cpp  fork_database.cpp  hybrid_database.cpp  remote_db_api.cpp  shared_authority.cpp  smt_evaluator.cpp  sophiatx_evaluator.cpp  sophiatx_objects.cpp  steem_evaluator.cpp  transaction_object.cpp  witness_schedule.cpp
libraries/chain/util/: impacted.cpp
libraries/chainbase/: CMakeLists.txt
libraries/chainbase/src/: chainbase.cpp
libraries/chainbase/test/: test.cpp
libraries/config/: CMakeLists.txt  config.cpp
libraries/egenesis/: CMakeLists.txt  Makefile  cmake_install.cmake  egenesis_brief.cpp  egenesis_brief.cpp.tmpl  egenesis_full.cpp  egenesis_full.cpp.tmpl  egenesis_none.cpp  egenesis_sophiatx.cpp  embed_genesis.cpp  genesis.json  genesis_testnet.json
libraries/fc/: .gitignore  .gitmodules  CMakeLists.txt
libraries/fc/CMakeModules/: FindBoost.cmake  FindReadline.cmake
libraries/fc/src/: asio.cpp  exception.cpp  filesystem.cpp  real128.cpp  stacktrace.cpp  static_variant.cpp  string.cpp  string_utils.cpp  time.cpp  uint128.cpp  utf8.cpp  variant.cpp  variant_object.cpp
libraries/fc/tests/: CMakeLists.txt  all_tests.cpp  api.cpp  bip_lock.cpp  bloom_test.cpp  hmac_test.cpp  real128_test.cpp  variant_test.cpp
libraries/legacy_plugins/account_statistics/: CMakeLists.txt  account_statistics_api.cpp  account_statistics_plugin.cpp  plugin.json
libraries/legacy_plugins/auth_util/: CMakeLists.txt  auth_util_api.cpp  auth_util_plugin.cpp  plugin.json
libraries/legacy_plugins/block_info/: CMakeLists.txt  block_info_api.cpp  block_info_plugin.cpp  plugin.json
libraries/legacy_plugins/blockchain_statistics/: CMakeLists.txt  blockchain_statistics_api.cpp  blockchain_statistics_plugin.cpp  plugin.json
libraries/legacy_plugins/delayed_node/: CMakeLists.txt  delayed_node_plugin.cpp  plugin.json
libraries/legacy_plugins/private_message/: CMakeLists.txt  plugin.json  private_message_plugin.cpp
libraries/legacy_plugins/raw_block/: CMakeLists.txt  plugin.json  raw_block_api.cpp  raw_block_plugin.cpp
libraries/manifest/: CMakeLists.txt
libraries/manifest/template_context/: plugins.json
libraries/net/: CMakeLists.txt  message_oriented_connection.cpp  node.cpp  peer_connection.cpp  peer_database.cpp
libraries/plugins/account_by_key/: CMakeLists.txt  account_by_key_plugin.cpp
libraries/plugins/account_history/: CMakeLists.txt  account_history_plugin.cpp
libraries/plugins/block_log_info/: CMakeLists.txt  block_log_info_plugin.cpp
libraries/plugins/chain/: CMakeLists.txt  chain_plugin.cpp  chain_plugin_full.cpp  chain_plugin_lite.cpp
libraries/plugins/custom_currencies/: CMakeLists.txt  custom_currencies_api.cpp  custom_currencies_plugin.cpp  plugin.json
libraries/plugins/custom_tokens/: CMakeLists.txt  custom_tokens_api.cpp  custom_tokens_plugin.cpp
libraries/plugins/follow/: follow_plugin.cpp  (+1 more)
libraries/protocol/: CMakeLists.txt  asset.cpp  asset_symbol.cpp  authority.cpp  block.cpp  get_config.cpp  operations.cpp  sign_state.cpp  smt_operations.cpp  sophiatx_operations.cpp  steem_operations.cpp  transaction.cpp  types.cpp  version.cpp
libraries/remote_db/: CMakeLists.txt
libraries/schema/: CMakeLists.txt  schema.cpp
libraries/utilities/: CMakeLists.txt  SysLogger.cpp  benchmark_dumper.cpp  git_revision.cpp  git_revision.cpp.in  key_conversion.cpp  logging_config.cpp  string_escape.cpp  sys_logger.cpp  tempdir.cpp  words.cpp
libraries/wallet/: CMakeLists.txt  Doxyfile  api_documentation_standin.cpp  remote_node_api.cpp  wallet.cpp
programs/: CMakeLists.txt
programs/alexandria/: CMakeLists.txt  alexandria.cpp  alexandria.hpp
programs/alexandriaJNI/: AlexandriaJNI.cpp  AlexandriaJNI.h  AlexandriaJNI.java  CMakeLists.txt
programs/alexandria_deamon/: CMakeLists.txt  main.cpp
programs/build_helpers/: check_reflect.py  configure_build.py  get_config_check.sh
programs/cli_wallet/: CMakeLists.txt  main.cpp
programs/js_operation_serializer/: CMakeLists.txt  main.cpp
programs/size_checker/: CMakeLists.txt  main.cpp
programs/sophiatx_light/: CMakeLists.txt  main.cpp
programs/sophiatxd/: CMakeLists.txt  main.cpp
programs/sophiatxd_light/: CMakeLists.txt  main.cpp
programs/steemd/: main.cpp
programs/test-main/: CMakeLists.txt  main.cpp
programs/util/: CMakeLists.txt  get_dev_key.cpp  newplugin.py  schema_test.cpp  sign_digest.cpp  sign_transaction.cpp  test_block_log.cpp  test_fixed_string.cpp  test_shared_mem.cpp
smart_contracts/: CMakeLists.txt  db_connection_resource.cpp  db_connections_pool.cpp  db_resource.cpp  db_resource_pool.cpp  smart_contract_test.cpp
smart_contracts/examples/: sqlite_wrapper_example.cpp
tests/smart_contracts/: CMakeLists.txt  db_resource_cache_tests.cpp  db_resource_pool_tests.cpp  generic_object_tests.cpp  main.cpp
(+623 files in other folders)
