add_subdirectory( fc )
add_subdirectory( config )
add_subdirectory( schema )
add_subdirectory( appbase )
add_subdirectory( chainbase )
add_subdirectory( chain )
add_subdirectory( egenesis )
add_subdirectory( protocol )
add_subdirectory( net )
add_subdirectory( utilities )
add_subdirectory( plugins )
add_subdirectory( manifest )
add_subdirectory( wallet )
add_subdirectory( alexandria )
add_subdirectory( SQLiteCpp )
