add_subdirectory( fc )
add_subdirectory( schema )
add_subdirectory( appbase )
add_subdirectory( chainbase )
add_subdirectory( chain )
add_subdirectory( egenesis )
add_subdirectory( protocol )
add_subdirectory( net )
add_subdirectory( utilities )
add_subdirectory( plugins )
add_subdirectory( manifest )
add_subdirectory( wallet )
#if (SQLite3_FOUND)
#    add_subdirectory( SQLiteCpp )
#endif(SQLite3_FOUND)
add_subdirectory( remote_db )
