add_subdirectory( cli_wallet )
add_subdirectory( sophiatxd )
add_subdirectory( sophiatx_light )
#add_subdirectory( delayed_node )
add_subdirectory( js_operation_serializer )
add_subdirectory( size_checker )
add_subdirectory( util )
add_subdirectory( alexandria_deamon )

if(BUILD_PIC AND (NOT ABAP_INTERFACE))
    add_subdirectory( alexandria )
    if(JNI_FOUND)
        add_subdirectory( alexandriaJNI )
    endif(JNI_FOUND)
endif(BUILD_PIC AND (NOT ABAP_INTERFACE))

